--- a/ch4-hw.Rmd
+++ b/ch4-hw.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'MECH481A6: Engineering Data Analysis in R'
 subtitle: 'Chapter 4 Homework: Visualizing Ozone Data' 
-author: 'Caden Cope'
+author: 'Caden Cope2'
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output: pdf_document
 ---
